# dd4hep2FBX

./: .gitignore  CMakeLists.txt  README.md  a.sh  test.cc
include/: GPolyhedron.hh  HepPolyhedron.h  dd4hep2FBXWriter.h
src/: BooleanProcessor.src  GPolyhedron.cc  HepPolyhedron.cc  HepPolyhedronProcessor.src  dd4hep2FBXWriter.cc  test.fbx
